# ifsca-test

./: .gitignore  README.md  deploy.sh  docker-compose.yml  package.json  pnpm-lock.yaml  postman-test.json
app/: .env.example  .gitignore  Dockerfile  deploy.sh  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js
app/prisma/: schema.prisma  seed.js
app/src/: env.mjs  instrumentation.js  proxy.js
app/src/app/: globals.css  layout.jsx  metadata.js  page.jsx
app/src/components/: animated-grid-pattern.jsx  app-header.jsx  app-nav.jsx  celebrate.jsx  desktop.jsx  google-login-button.jsx  icons.jsx  mobile.jsx  pdf-preview-dialog.jsx  progress-tracker.jsx  sidebar-skeleton.jsx  signout.jsx  (+2 more)
documents-api/: .env.example  .gitignore  Dockerfile  celery_app.py  database.py  deploy.sh  pyproject.toml  server.py  settings.py
documents-api/api_types/: __init__.py  api.py
documents-api/prompts/: chat_with_document.yml  chat_with_multiple_documents.yml  classify_document.yml  parse_document.yml
documents-api/tasks/: document_processing.py
documents-api/utils/: ai_agent.py  auth.py  classifier.py  document_processor.py  embeddings.py  langfuse_client.py  llm_client.py  prompts.py  redis_utils.py  response_generator.py  retry_utils.py  semantic_agent.py  source_relevance.py  websocket_handler.py
documents-api/utils/semantic_helper/: __init__.py  dedupe.py  query_quality.py  response_builder.py  search.py  text_utils.py  understanding.py
evaluation/: .env.example  output-gemini-2.0-flash.csv  output.csv  question-answer.csv  test_global_chat.py
(+130 files in other folders)
